--- a/archives/toutiao-search/2024-03-20.md
+++ b/archives/toutiao-search/2024-03-20.md
@@ -1,44 +1,70 @@
 # 2024-03-20
 
-共 275 条
+共 296 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Mar 20 2024 16:00:35 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Wed Mar 20 2024 17:00:51 GMT+0800 (China Standard Time) -->
 1. [为何王树国校长离任如此受关注](https://so.toutiao.com/search?keyword=为何王树国校长离任如此受关注)
-1. [山西高速隧道车祸至少10名伤者超68岁](https://so.toutiao.com/search?keyword=山西高速隧道车祸至少10名伤者超68岁)
-1. [今日春分 一起向春而行](https://so.toutiao.com/search?keyword=今日春分+一起向春而行)
-1. [官方通报13岁男孩性侵女童未立案](https://so.toutiao.com/search?keyword=官方通报13岁男孩性侵女童未立案)
-1. [张瑞敏点拨董宇辉：你已经是人才了](https://so.toutiao.com/search?keyword=张瑞敏点拨董宇辉：你已经是人才了)
 1. [60岁老人炒菠菜未焯水致肾病恶化](https://so.toutiao.com/search?keyword=60岁老人炒菠菜未焯水致肾病恶化)
+1. [今日春分 一起向春而行](https://so.toutiao.com/search?keyword=今日春分+一起向春而行)
+1. [张瑞敏点拨董宇辉：你已经是人才了](https://so.toutiao.com/search?keyword=张瑞敏点拨董宇辉：你已经是人才了)
 1. [普京称新任期首次出访考虑去中国](https://so.toutiao.com/search?keyword=普京称新任期首次出访考虑去中国)
+1. [官方回应成都巨响](https://so.toutiao.com/search?keyword=官方回应成都巨响)
+1. [98岁网红姥姥去世 网友评论区送别](https://so.toutiao.com/search?keyword=98岁网红姥姥去世+网友评论区送别)
+1. [郑恺外滩偶遇苹果CEO库克](https://so.toutiao.com/search?keyword=郑恺外滩偶遇苹果CEO库克)
+1. [中国人在俄罗斯盖房直呼大件太贵](https://so.toutiao.com/search?keyword=中国人在俄罗斯盖房直呼大件太贵)
+1. [警方辟谣雅江3名扑火人员牺牲](https://so.toutiao.com/search?keyword=警方辟谣雅江3名扑火人员牺牲)
+1. [张颂文隆妮林家川回了高家老宅](https://so.toutiao.com/search?keyword=张颂文隆妮林家川回了高家老宅)
+1. [女子遭多人殴打 涉案人员已被抓获](https://so.toutiao.com/search?keyword=女子遭多人殴打+涉案人员已被抓获)
+1. [新九品芝麻官上映4天票房3647元](https://so.toutiao.com/search?keyword=新九品芝麻官上映4天票房3647元)
+1. [歼20紧急升空逼退外机](https://so.toutiao.com/search?keyword=歼20紧急升空逼退外机)
+1. [雷军晒小米汽车工装照](https://so.toutiao.com/search?keyword=雷军晒小米汽车工装照)
+1. [美国女子第一次来成都直呼太酷了](https://so.toutiao.com/search?keyword=美国女子第一次来成都直呼太酷了)
+1. [新一周销量前10比亚迪占7席霸榜](https://so.toutiao.com/search?keyword=新一周销量前10比亚迪占7席霸榜)
+1. [律师：许家印或被追究刑事责任](https://so.toutiao.com/search?keyword=律师：许家印或被追究刑事责任)
+1. [全国房价跌23%意味着啥](https://so.toutiao.com/search?keyword=全国房价跌23%意味着啥)
+1. [小伙在美国卖三蹦子日入1万美金](https://so.toutiao.com/search?keyword=小伙在美国卖三蹦子日入1万美金)
+1. [王婆说媒火出圈 有游客一早去排队](https://so.toutiao.com/search?keyword=王婆说媒火出圈+有游客一早去排队)
+1. [伊万强调国足对阵新加坡要稳快准](https://so.toutiao.com/search?keyword=伊万强调国足对阵新加坡要稳快准)
+1. [湖南一县政协主席涉刑案 已被控制](https://so.toutiao.com/search?keyword=湖南一县政协主席涉刑案+已被控制)
+1. [曝凯特王妃“复出”绝密计划获认可](https://so.toutiao.com/search?keyword=曝凯特王妃“复出”绝密计划获认可)
+1. [曝小米汽车定价较去年降3到5万](https://so.toutiao.com/search?keyword=曝小米汽车定价较去年降3到5万)
+1. [劳斯莱斯逼停直行车 司机被罚200](https://so.toutiao.com/search?keyword=劳斯莱斯逼停直行车+司机被罚200)
+1. [国足客战新加坡全力争胜](https://so.toutiao.com/search?keyword=国足客战新加坡全力争胜)
+1. [政府要过“紧日子”谁最受影响](https://so.toutiao.com/search?keyword=政府要过“紧日子”谁最受影响)
+1. [投资者子女可在西藏高考公平吗](https://so.toutiao.com/search?keyword=投资者子女可在西藏高考公平吗)
+1. [19岁小伙救人溺亡 获救者下跪致谢](https://so.toutiao.com/search?keyword=19岁小伙救人溺亡+获救者下跪致谢)
+1. [乘大客车出行遇事故如何自救逃生](https://so.toutiao.com/search?keyword=乘大客车出行遇事故如何自救逃生)
+1. [清明放假3天](https://so.toutiao.com/search?keyword=清明放假3天)
+1. [近3万元金手镯仅含足金十克](https://so.toutiao.com/search?keyword=近3万元金手镯仅含足金十克)
+1. [年租金50万的网红淀粉肠店门可罗雀](https://so.toutiao.com/search?keyword=年租金50万的网红淀粉肠店门可罗雀)
+1. [国足公布最新集训全家福](https://so.toutiao.com/search?keyword=国足公布最新集训全家福)
+1. [男子持台球杆殴打2名女店员被抓](https://so.toutiao.com/search?keyword=男子持台球杆殴打2名女店员被抓)
+1. [俄罗斯小伙大口吃生姜当零食](https://so.toutiao.com/search?keyword=俄罗斯小伙大口吃生姜当零食)
+1. [秦海璐分享马尔代夫随拍照](https://so.toutiao.com/search?keyword=秦海璐分享马尔代夫随拍照)
+1. [民警示意女子停车被撞倒](https://so.toutiao.com/search?keyword=民警示意女子停车被撞倒)
+1. [投资9000万元危房全没拆 21人被追责](https://so.toutiao.com/search?keyword=投资9000万元危房全没拆+21人被追责)
+1. [曝中国富豪曾借给福原爱3亿日元](https://so.toutiao.com/search?keyword=曝中国富豪曾借给福原爱3亿日元)
+1. [小男孩翻出3楼窗外被女子隔空吼回](https://so.toutiao.com/search?keyword=小男孩翻出3楼窗外被女子隔空吼回)
+1. [国产汽车芯片路在何方](https://so.toutiao.com/search?keyword=国产汽车芯片路在何方)
+1. [3月第2周仔猪等集贸市场价环比上涨](https://so.toutiao.com/search?keyword=3月第2周仔猪等集贸市场价环比上涨)
+1. [男子养了一群会飞的鸡](https://so.toutiao.com/search?keyword=男子养了一群会飞的鸡)
+1. [AI视角下的春分有多美](https://so.toutiao.com/search?keyword=AI视角下的春分有多美)
+1. [雷克萨斯加价公司拟被罚45万](https://so.toutiao.com/search?keyword=雷克萨斯加价公司拟被罚45万)
+1. [媒体：戴伟浚等3人缺席对抗训练](https://so.toutiao.com/search?keyword=媒体：戴伟浚等3人缺席对抗训练)
+1. [还有多少车企会入局华为](https://so.toutiao.com/search?keyword=还有多少车企会入局华为)
+1. [长征八号如何打造“航班化”火箭](https://so.toutiao.com/search?keyword=长征八号如何打造“航班化”火箭)
+1. [山西高速隧道车祸至少10名伤者超68岁](https://so.toutiao.com/search?keyword=山西高速隧道车祸至少10名伤者超68岁)
+1. [官方通报13岁男孩性侵女童未立案](https://so.toutiao.com/search?keyword=官方通报13岁男孩性侵女童未立案)
 1. [贵州小伙回应在美国卖三蹦子火了](https://so.toutiao.com/search?keyword=贵州小伙回应在美国卖三蹦子火了)
 1. [成都巨响](https://so.toutiao.com/search?keyword=成都巨响)
-1. [警方辟谣雅江3名扑火人员牺牲](https://so.toutiao.com/search?keyword=警方辟谣雅江3名扑火人员牺牲)
 1. [山西高速14死事故车辆系旅游大巴](https://so.toutiao.com/search?keyword=山西高速14死事故车辆系旅游大巴)
 1. [海口雷克萨斯4S店涉嫌价外加价后续](https://so.toutiao.com/search?keyword=海口雷克萨斯4S店涉嫌价外加价后续)
-1. [郑恺外滩偶遇苹果CEO库克](https://so.toutiao.com/search?keyword=郑恺外滩偶遇苹果CEO库克)
 1. [山西高速交通事故已致14人死亡](https://so.toutiao.com/search?keyword=山西高速交通事故已致14人死亡)
-1. [中国人在俄罗斯盖房直呼大件太贵](https://so.toutiao.com/search?keyword=中国人在俄罗斯盖房直呼大件太贵)
-1. [雷军晒小米汽车工装照](https://so.toutiao.com/search?keyword=雷军晒小米汽车工装照)
-1. [歼20紧急升空逼退外机](https://so.toutiao.com/search?keyword=歼20紧急升空逼退外机)
-1. [新九品芝麻官上映4天票房3647元](https://so.toutiao.com/search?keyword=新九品芝麻官上映4天票房3647元)
-1. [王婆说媒火出圈 有游客一早去排队](https://so.toutiao.com/search?keyword=王婆说媒火出圈+有游客一早去排队)
-1. [政府要过“紧日子”谁最受影响](https://so.toutiao.com/search?keyword=政府要过“紧日子”谁最受影响)
-1. [俄罗斯小伙大口吃生姜当零食](https://so.toutiao.com/search?keyword=俄罗斯小伙大口吃生姜当零食)
-1. [湖南一县政协主席涉刑案 已被控制](https://so.toutiao.com/search?keyword=湖南一县政协主席涉刑案+已被控制)
-1. [投资者子女可在西藏高考公平吗](https://so.toutiao.com/search?keyword=投资者子女可在西藏高考公平吗)
 1. [平台方回应上门按摩APP涉黄](https://so.toutiao.com/search?keyword=平台方回应上门按摩APP涉黄)
-1. [曝凯特王妃“复出”绝密计划获认可](https://so.toutiao.com/search?keyword=曝凯特王妃“复出”绝密计划获认可)
-1. [19岁小伙救人溺亡 获救者下跪致谢](https://so.toutiao.com/search?keyword=19岁小伙救人溺亡+获救者下跪致谢)
 1. [罚恒大41.75亿的深层意义是什么](https://so.toutiao.com/search?keyword=罚恒大41.75亿的深层意义是什么)
-1. [清明放假3天](https://so.toutiao.com/search?keyword=清明放假3天)
-1. [劳斯莱斯逼停直行车 司机被罚200](https://so.toutiao.com/search?keyword=劳斯莱斯逼停直行车+司机被罚200)
 1. [台陆军四月将在金门海域实弹射击](https://so.toutiao.com/search?keyword=台陆军四月将在金门海域实弹射击)
-1. [律师：许家印或被追究刑事责任](https://so.toutiao.com/search?keyword=律师：许家印或被追究刑事责任)
-1. [年租金50万的网红淀粉肠店门可罗雀](https://so.toutiao.com/search?keyword=年租金50万的网红淀粉肠店门可罗雀)
-1. [雷克萨斯加价公司拟被罚45万](https://so.toutiao.com/search?keyword=雷克萨斯加价公司拟被罚45万)
 1. [江西乐平市常务副市长丁巍被查](https://so.toutiao.com/search?keyword=江西乐平市常务副市长丁巍被查)
-1. [曝小米汽车定价较去年降3到5万](https://so.toutiao.com/search?keyword=曝小米汽车定价较去年降3到5万)
 1. [专家谈韩为何举办所谓“民主峰会”](https://so.toutiao.com/search?keyword=专家谈韩为何举办所谓“民主峰会”)
 1. [比亚迪新能源车工厂迁址扩建获批](https://so.toutiao.com/search?keyword=比亚迪新能源车工厂迁址扩建获批)
 1. [国际油价3月19日上涨](https://so.toutiao.com/search?keyword=国际油价3月19日上涨)
@@ -48,8 +74,6 @@
 1. [比亚迪京东自营旗舰店上线](https://so.toutiao.com/search?keyword=比亚迪京东自营旗舰店上线)
 1. [19岁救人英雄遗体告别](https://so.toutiao.com/search?keyword=19岁救人英雄遗体告别)
 1. [30台发动机助进阶版“鹊桥”升空](https://so.toutiao.com/search?keyword=30台发动机助进阶版“鹊桥”升空)
-1. [小男孩翻出3楼窗外被女子隔空吼回](https://so.toutiao.com/search?keyword=小男孩翻出3楼窗外被女子隔空吼回)
-1. [近3万元金手镯仅含足金十克](https://so.toutiao.com/search?keyword=近3万元金手镯仅含足金十克)
 1. [云南600万资产家庭达2.29万户](https://so.toutiao.com/search?keyword=云南600万资产家庭达2.29万户)
 1. [胡锡进：中小学应加强对学生心理关注](https://so.toutiao.com/search?keyword=胡锡进：中小学应加强对学生心理关注)
 1. [医院员工试图查阅凯特医疗记录被捕](https://so.toutiao.com/search?keyword=医院员工试图查阅凯特医疗记录被捕)
@@ -74,7 +98,6 @@
 1. [美防长称俄军伤亡超31万人](https://so.toutiao.com/search?keyword=美防长称俄军伤亡超31万人)
 1. [美防长：美国不会让乌克兰失败](https://so.toutiao.com/search?keyword=美防长：美国不会让乌克兰失败)
 1. [黄仁勋回应中国市场问题](https://so.toutiao.com/search?keyword=黄仁勋回应中国市场问题)
-1. [男子持台球杆殴打2名女店员被抓](https://so.toutiao.com/search?keyword=男子持台球杆殴打2名女店员被抓)
 1. [凯特现身视频能平息舆论风暴吗](https://so.toutiao.com/search?keyword=凯特现身视频能平息舆论风暴吗)
 1. [特斯拉国产Model Y将涨价](https://so.toutiao.com/search?keyword=特斯拉国产Model+Y将涨价)
 1. [江苏扬州机关事务管理局原局长被查](https://so.toutiao.com/search?keyword=江苏扬州机关事务管理局原局长被查)
@@ -90,7 +113,6 @@
 1. [凯特王妃就诊的高级医院出丑闻](https://so.toutiao.com/search?keyword=凯特王妃就诊的高级医院出丑闻)
 1. [拜登对以色列发出“最强烈警告”](https://so.toutiao.com/search?keyword=拜登对以色列发出“最强烈警告”)
 1. [黄仁勋成AI时代“唐僧肉”](https://so.toutiao.com/search?keyword=黄仁勋成AI时代“唐僧肉”)
-1. [民警示意女子停车被撞倒](https://so.toutiao.com/search?keyword=民警示意女子停车被撞倒)
 1. [英伟达扩大与中国车企合作](https://so.toutiao.com/search?keyword=英伟达扩大与中国车企合作)
 1. [山西省委原副书记商黎光被决定逮捕](https://so.toutiao.com/search?keyword=山西省委原副书记商黎光被决定逮捕)
 1. [捷尼赛思GV80轿跑车实图](https://so.toutiao.com/search?keyword=捷尼赛思GV80轿跑车实图)
@@ -116,7 +138,6 @@
 1. [巨亏1350亿的万亿央企是如何垮的](https://so.toutiao.com/search?keyword=巨亏1350亿的万亿央企是如何垮的)
 1. [午评：A股三大指数震荡涨跌不一](https://so.toutiao.com/search?keyword=午评：A股三大指数震荡涨跌不一)
 1. [警方通报女孩纠集多人围殴13岁男孩](https://so.toutiao.com/search?keyword=警方通报女孩纠集多人围殴13岁男孩)
-1. [投资9000万元危房全没拆 21人被追责](https://so.toutiao.com/search?keyword=投资9000万元危房全没拆+21人被追责)
 1. [国足总身价1158万欧达新加坡队3倍](https://so.toutiao.com/search?keyword=国足总身价1158万欧达新加坡队3倍)
 1. [比特币惊魂闪崩 超24万人爆仓](https://so.toutiao.com/search?keyword=比特币惊魂闪崩+超24万人爆仓)
 1. [2024年医疗和妇幼健康这样发力](https://so.toutiao.com/search?keyword=2024年医疗和妇幼健康这样发力)
