--- a/archives/toutiao-search/2024-03-20.md
+++ b/archives/toutiao-search/2024-03-20.md
@@ -1,39 +1,62 @@
 # 2024-03-20
 
-共 296 条
+共 313 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Mar 20 2024 17:00:51 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Wed Mar 20 2024 18:01:00 GMT+0800 (China Standard Time) -->
 1. [为何王树国校长离任如此受关注](https://so.toutiao.com/search?keyword=为何王树国校长离任如此受关注)
 1. [60岁老人炒菠菜未焯水致肾病恶化](https://so.toutiao.com/search?keyword=60岁老人炒菠菜未焯水致肾病恶化)
 1. [今日春分 一起向春而行](https://so.toutiao.com/search?keyword=今日春分+一起向春而行)
-1. [张瑞敏点拨董宇辉：你已经是人才了](https://so.toutiao.com/search?keyword=张瑞敏点拨董宇辉：你已经是人才了)
-1. [普京称新任期首次出访考虑去中国](https://so.toutiao.com/search?keyword=普京称新任期首次出访考虑去中国)
+1. [娃哈哈旗舰店销售额比上周下降90%](https://so.toutiao.com/search?keyword=娃哈哈旗舰店销售额比上周下降90%)
 1. [官方回应成都巨响](https://so.toutiao.com/search?keyword=官方回应成都巨响)
 1. [98岁网红姥姥去世 网友评论区送别](https://so.toutiao.com/search?keyword=98岁网红姥姥去世+网友评论区送别)
+1. [美国女子第一次来成都直呼太酷了](https://so.toutiao.com/search?keyword=美国女子第一次来成都直呼太酷了)
 1. [郑恺外滩偶遇苹果CEO库克](https://so.toutiao.com/search?keyword=郑恺外滩偶遇苹果CEO库克)
-1. [中国人在俄罗斯盖房直呼大件太贵](https://so.toutiao.com/search?keyword=中国人在俄罗斯盖房直呼大件太贵)
+1. [普京称新任期首次出访考虑去中国](https://so.toutiao.com/search?keyword=普京称新任期首次出访考虑去中国)
 1. [警方辟谣雅江3名扑火人员牺牲](https://so.toutiao.com/search?keyword=警方辟谣雅江3名扑火人员牺牲)
 1. [张颂文隆妮林家川回了高家老宅](https://so.toutiao.com/search?keyword=张颂文隆妮林家川回了高家老宅)
-1. [女子遭多人殴打 涉案人员已被抓获](https://so.toutiao.com/search?keyword=女子遭多人殴打+涉案人员已被抓获)
+1. [曝中国富豪曾借给福原爱3亿日元](https://so.toutiao.com/search?keyword=曝中国富豪曾借给福原爱3亿日元)
+1. [南宁一医院实习生烧炭自杀](https://so.toutiao.com/search?keyword=南宁一医院实习生烧炭自杀)
 1. [新九品芝麻官上映4天票房3647元](https://so.toutiao.com/search?keyword=新九品芝麻官上映4天票房3647元)
-1. [歼20紧急升空逼退外机](https://so.toutiao.com/search?keyword=歼20紧急升空逼退外机)
+1. [张瑞敏点拨董宇辉：你已经是人才了](https://so.toutiao.com/search?keyword=张瑞敏点拨董宇辉：你已经是人才了)
+1. [王婆说媒火出圈 有游客一早去排队](https://so.toutiao.com/search?keyword=王婆说媒火出圈+有游客一早去排队)
 1. [雷军晒小米汽车工装照](https://so.toutiao.com/search?keyword=雷军晒小米汽车工装照)
-1. [美国女子第一次来成都直呼太酷了](https://so.toutiao.com/search?keyword=美国女子第一次来成都直呼太酷了)
-1. [新一周销量前10比亚迪占7席霸榜](https://so.toutiao.com/search?keyword=新一周销量前10比亚迪占7席霸榜)
 1. [律师：许家印或被追究刑事责任](https://so.toutiao.com/search?keyword=律师：许家印或被追究刑事责任)
 1. [全国房价跌23%意味着啥](https://so.toutiao.com/search?keyword=全国房价跌23%意味着啥)
-1. [小伙在美国卖三蹦子日入1万美金](https://so.toutiao.com/search?keyword=小伙在美国卖三蹦子日入1万美金)
-1. [王婆说媒火出圈 有游客一早去排队](https://so.toutiao.com/search?keyword=王婆说媒火出圈+有游客一早去排队)
-1. [伊万强调国足对阵新加坡要稳快准](https://so.toutiao.com/search?keyword=伊万强调国足对阵新加坡要稳快准)
-1. [湖南一县政协主席涉刑案 已被控制](https://so.toutiao.com/search?keyword=湖南一县政协主席涉刑案+已被控制)
-1. [曝凯特王妃“复出”绝密计划获认可](https://so.toutiao.com/search?keyword=曝凯特王妃“复出”绝密计划获认可)
-1. [曝小米汽车定价较去年降3到5万](https://so.toutiao.com/search?keyword=曝小米汽车定价较去年降3到5万)
-1. [劳斯莱斯逼停直行车 司机被罚200](https://so.toutiao.com/search?keyword=劳斯莱斯逼停直行车+司机被罚200)
-1. [国足客战新加坡全力争胜](https://so.toutiao.com/search?keyword=国足客战新加坡全力争胜)
-1. [政府要过“紧日子”谁最受影响](https://so.toutiao.com/search?keyword=政府要过“紧日子”谁最受影响)
-1. [投资者子女可在西藏高考公平吗](https://so.toutiao.com/search?keyword=投资者子女可在西藏高考公平吗)
+1. [曝雷军将为小米汽车发放1000个F码](https://so.toutiao.com/search?keyword=曝雷军将为小米汽车发放1000个F码)
+1. [女子遭多人殴打 涉案人员已被抓获](https://so.toutiao.com/search?keyword=女子遭多人殴打+涉案人员已被抓获)
 1. [19岁小伙救人溺亡 获救者下跪致谢](https://so.toutiao.com/search?keyword=19岁小伙救人溺亡+获救者下跪致谢)
+1. [投资9000万元危房全没拆 21人被追责](https://so.toutiao.com/search?keyword=投资9000万元危房全没拆+21人被追责)
+1. [雷克萨斯加价公司拟被罚45万](https://so.toutiao.com/search?keyword=雷克萨斯加价公司拟被罚45万)
+1. [歼20紧急升空逼退外机](https://so.toutiao.com/search?keyword=歼20紧急升空逼退外机)
+1. [湖南一县政协主席涉刑案 已被控制](https://so.toutiao.com/search?keyword=湖南一县政协主席涉刑案+已被控制)
+1. [中国人在俄罗斯盖房直呼大件太贵](https://so.toutiao.com/search?keyword=中国人在俄罗斯盖房直呼大件太贵)
+1. [王楚钦花式赞马龙](https://so.toutiao.com/search?keyword=王楚钦花式赞马龙)
+1. [小伙在美国卖三蹦子日入1万美金](https://so.toutiao.com/search?keyword=小伙在美国卖三蹦子日入1万美金)
+1. [中方谈是否同法说过法向乌派兵话题](https://so.toutiao.com/search?keyword=中方谈是否同法说过法向乌派兵话题)
+1. [曝小米汽车定价较去年降3到5万](https://so.toutiao.com/search?keyword=曝小米汽车定价较去年降3到5万)
+1. [胡塞导弹首次击中以色列领土](https://so.toutiao.com/search?keyword=胡塞导弹首次击中以色列领土)
+1. [医院员工试图查阅凯特医疗记录被捕](https://so.toutiao.com/search?keyword=医院员工试图查阅凯特医疗记录被捕)
+1. [官方辟谣小米汽车定价26.6万元起](https://so.toutiao.com/search?keyword=官方辟谣小米汽车定价26.6万元起)
+1. [大S小作文细节](https://so.toutiao.com/search?keyword=大S小作文细节)
+1. [政府要过“紧日子”谁最受影响](https://so.toutiao.com/search?keyword=政府要过“紧日子”谁最受影响)
+1. [当贵阳清水烫遇上甘肃天水麻辣烫](https://so.toutiao.com/search?keyword=当贵阳清水烫遇上甘肃天水麻辣烫)
+1. [曝凯特王妃“复出”绝密计划获认可](https://so.toutiao.com/search?keyword=曝凯特王妃“复出”绝密计划获认可)
+1. [小男孩翻出3楼窗外被女子隔空吼回](https://so.toutiao.com/search?keyword=小男孩翻出3楼窗外被女子隔空吼回)
+1. [国产汽车芯片路在何方](https://so.toutiao.com/search?keyword=国产汽车芯片路在何方)
+1. [国足客战新加坡全力争胜](https://so.toutiao.com/search?keyword=国足客战新加坡全力争胜)
+1. [四川女篮季后赛票价最高1280元](https://so.toutiao.com/search?keyword=四川女篮季后赛票价最高1280元)
+1. [青岛已新开6家甘肃麻辣烫小吃店](https://so.toutiao.com/search?keyword=青岛已新开6家甘肃麻辣烫小吃店)
+1. [男子新房舍不得铺地板 四处偷地垫](https://so.toutiao.com/search?keyword=男子新房舍不得铺地板+四处偷地垫)
+1. [投资者子女可在西藏高考公平吗](https://so.toutiao.com/search?keyword=投资者子女可在西藏高考公平吗)
+1. [小男孩帅气侧手翻砸到老师大腿上](https://so.toutiao.com/search?keyword=小男孩帅气侧手翻砸到老师大腿上)
+1. [库克在中国首谈生成式AI](https://so.toutiao.com/search?keyword=库克在中国首谈生成式AI)
+1. [卡梅伦发表涉港错误言论 中方回应](https://so.toutiao.com/search?keyword=卡梅伦发表涉港错误言论+中方回应)
+1. [专家评“券商一哥”硬刚深交所](https://so.toutiao.com/search?keyword=专家评“券商一哥”硬刚深交所)
+1. [有游客凌晨2点排队吃天水麻辣烫](https://so.toutiao.com/search?keyword=有游客凌晨2点排队吃天水麻辣烫)
+1. [新一周销量前10比亚迪占7席霸榜](https://so.toutiao.com/search?keyword=新一周销量前10比亚迪占7席霸榜)
+1. [伊万强调国足对阵新加坡要稳快准](https://so.toutiao.com/search?keyword=伊万强调国足对阵新加坡要稳快准)
+1. [劳斯莱斯逼停直行车 司机被罚200](https://so.toutiao.com/search?keyword=劳斯莱斯逼停直行车+司机被罚200)
 1. [乘大客车出行遇事故如何自救逃生](https://so.toutiao.com/search?keyword=乘大客车出行遇事故如何自救逃生)
 1. [清明放假3天](https://so.toutiao.com/search?keyword=清明放假3天)
 1. [近3万元金手镯仅含足金十克](https://so.toutiao.com/search?keyword=近3万元金手镯仅含足金十克)
@@ -43,14 +66,9 @@
 1. [俄罗斯小伙大口吃生姜当零食](https://so.toutiao.com/search?keyword=俄罗斯小伙大口吃生姜当零食)
 1. [秦海璐分享马尔代夫随拍照](https://so.toutiao.com/search?keyword=秦海璐分享马尔代夫随拍照)
 1. [民警示意女子停车被撞倒](https://so.toutiao.com/search?keyword=民警示意女子停车被撞倒)
-1. [投资9000万元危房全没拆 21人被追责](https://so.toutiao.com/search?keyword=投资9000万元危房全没拆+21人被追责)
-1. [曝中国富豪曾借给福原爱3亿日元](https://so.toutiao.com/search?keyword=曝中国富豪曾借给福原爱3亿日元)
-1. [小男孩翻出3楼窗外被女子隔空吼回](https://so.toutiao.com/search?keyword=小男孩翻出3楼窗外被女子隔空吼回)
-1. [国产汽车芯片路在何方](https://so.toutiao.com/search?keyword=国产汽车芯片路在何方)
 1. [3月第2周仔猪等集贸市场价环比上涨](https://so.toutiao.com/search?keyword=3月第2周仔猪等集贸市场价环比上涨)
 1. [男子养了一群会飞的鸡](https://so.toutiao.com/search?keyword=男子养了一群会飞的鸡)
 1. [AI视角下的春分有多美](https://so.toutiao.com/search?keyword=AI视角下的春分有多美)
-1. [雷克萨斯加价公司拟被罚45万](https://so.toutiao.com/search?keyword=雷克萨斯加价公司拟被罚45万)
 1. [媒体：戴伟浚等3人缺席对抗训练](https://so.toutiao.com/search?keyword=媒体：戴伟浚等3人缺席对抗训练)
 1. [还有多少车企会入局华为](https://so.toutiao.com/search?keyword=还有多少车企会入局华为)
 1. [长征八号如何打造“航班化”火箭](https://so.toutiao.com/search?keyword=长征八号如何打造“航班化”火箭)
@@ -76,7 +94,6 @@
 1. [30台发动机助进阶版“鹊桥”升空](https://so.toutiao.com/search?keyword=30台发动机助进阶版“鹊桥”升空)
 1. [云南600万资产家庭达2.29万户](https://so.toutiao.com/search?keyword=云南600万资产家庭达2.29万户)
 1. [胡锡进：中小学应加强对学生心理关注](https://so.toutiao.com/search?keyword=胡锡进：中小学应加强对学生心理关注)
-1. [医院员工试图查阅凯特医疗记录被捕](https://so.toutiao.com/search?keyword=医院员工试图查阅凯特医疗记录被捕)
 1. [孕妈下电梯后摔倒 丈夫自责心疼](https://so.toutiao.com/search?keyword=孕妈下电梯后摔倒+丈夫自责心疼)
 1. [草长莺飞 万物可爱](https://so.toutiao.com/search?keyword=草长莺飞+万物可爱)
 1. [阿姨一碗附子排骨汤下肚后中毒](https://so.toutiao.com/search?keyword=阿姨一碗附子排骨汤下肚后中毒)
