--- a/archives/toutiao-search/2024-03-20.md
+++ b/archives/toutiao-search/2024-03-20.md
@@ -1,62 +1,77 @@
 # 2024-03-20
 
-共 313 条
+共 327 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Mar 20 2024 18:01:00 GMT+0800 (China Standard Time) -->
-1. [为何王树国校长离任如此受关注](https://so.toutiao.com/search?keyword=为何王树国校长离任如此受关注)
+<!-- 最后更新时间 Wed Mar 20 2024 19:00:38 GMT+0800 (China Standard Time) -->
+1. [东航致132人遇难事故调查进展公布](https://so.toutiao.com/search?keyword=东航致132人遇难事故调查进展公布)
 1. [60岁老人炒菠菜未焯水致肾病恶化](https://so.toutiao.com/search?keyword=60岁老人炒菠菜未焯水致肾病恶化)
 1. [今日春分 一起向春而行](https://so.toutiao.com/search?keyword=今日春分+一起向春而行)
-1. [娃哈哈旗舰店销售额比上周下降90%](https://so.toutiao.com/search?keyword=娃哈哈旗舰店销售额比上周下降90%)
-1. [官方回应成都巨响](https://so.toutiao.com/search?keyword=官方回应成都巨响)
-1. [98岁网红姥姥去世 网友评论区送别](https://so.toutiao.com/search?keyword=98岁网红姥姥去世+网友评论区送别)
-1. [美国女子第一次来成都直呼太酷了](https://so.toutiao.com/search?keyword=美国女子第一次来成都直呼太酷了)
-1. [郑恺外滩偶遇苹果CEO库克](https://so.toutiao.com/search?keyword=郑恺外滩偶遇苹果CEO库克)
-1. [普京称新任期首次出访考虑去中国](https://so.toutiao.com/search?keyword=普京称新任期首次出访考虑去中国)
-1. [警方辟谣雅江3名扑火人员牺牲](https://so.toutiao.com/search?keyword=警方辟谣雅江3名扑火人员牺牲)
-1. [张颂文隆妮林家川回了高家老宅](https://so.toutiao.com/search?keyword=张颂文隆妮林家川回了高家老宅)
-1. [曝中国富豪曾借给福原爱3亿日元](https://so.toutiao.com/search?keyword=曝中国富豪曾借给福原爱3亿日元)
-1. [南宁一医院实习生烧炭自杀](https://so.toutiao.com/search?keyword=南宁一医院实习生烧炭自杀)
-1. [新九品芝麻官上映4天票房3647元](https://so.toutiao.com/search?keyword=新九品芝麻官上映4天票房3647元)
-1. [张瑞敏点拨董宇辉：你已经是人才了](https://so.toutiao.com/search?keyword=张瑞敏点拨董宇辉：你已经是人才了)
-1. [王婆说媒火出圈 有游客一早去排队](https://so.toutiao.com/search?keyword=王婆说媒火出圈+有游客一早去排队)
-1. [雷军晒小米汽车工装照](https://so.toutiao.com/search?keyword=雷军晒小米汽车工装照)
-1. [律师：许家印或被追究刑事责任](https://so.toutiao.com/search?keyword=律师：许家印或被追究刑事责任)
 1. [全国房价跌23%意味着啥](https://so.toutiao.com/search?keyword=全国房价跌23%意味着啥)
+1. [新九品芝麻官上映4天票房3647元](https://so.toutiao.com/search?keyword=新九品芝麻官上映4天票房3647元)
+1. [98岁网红姥姥去世 网友评论区送别](https://so.toutiao.com/search?keyword=98岁网红姥姥去世+网友评论区送别)
+1. [小伙在美国卖三蹦子日入1万美金](https://so.toutiao.com/search?keyword=小伙在美国卖三蹦子日入1万美金)
+1. [南宁一医院实习生烧炭自杀](https://so.toutiao.com/search?keyword=南宁一医院实习生烧炭自杀)
+1. [小男孩帅气侧手翻砸到老师大腿上](https://so.toutiao.com/search?keyword=小男孩帅气侧手翻砸到老师大腿上)
+1. [警方辟谣雅江3名扑火人员牺牲](https://so.toutiao.com/search?keyword=警方辟谣雅江3名扑火人员牺牲)
+1. [为何王树国校长离任如此受关注](https://so.toutiao.com/search?keyword=为何王树国校长离任如此受关注)
+1. [投资9000万元危房全没拆 21人被追责](https://so.toutiao.com/search?keyword=投资9000万元危房全没拆+21人被追责)
+1. [新一轮冷空气即将来袭](https://so.toutiao.com/search?keyword=新一轮冷空气即将来袭)
+1. [张颂文隆妮林家川回了高家老宅](https://so.toutiao.com/search?keyword=张颂文隆妮林家川回了高家老宅)
+1. [美国女子第一次来成都直呼太酷了](https://so.toutiao.com/search?keyword=美国女子第一次来成都直呼太酷了)
+1. [主持人追问棚改造假：9000万去哪了](https://so.toutiao.com/search?keyword=主持人追问棚改造假：9000万去哪了)
+1. [曝中国富豪曾借给福原爱3亿日元](https://so.toutiao.com/search?keyword=曝中国富豪曾借给福原爱3亿日元)
+1. [雷军晒小米汽车工装照](https://so.toutiao.com/search?keyword=雷军晒小米汽车工装照)
+1. [郑恺外滩偶遇苹果CEO库克](https://so.toutiao.com/search?keyword=郑恺外滩偶遇苹果CEO库克)
+1. [央视：年龄岂能成为犯罪免罚的挡箭牌](https://so.toutiao.com/search?keyword=央视：年龄岂能成为犯罪免罚的挡箭牌)
+1. [官方回应成都巨响](https://so.toutiao.com/search?keyword=官方回应成都巨响)
 1. [曝雷军将为小米汽车发放1000个F码](https://so.toutiao.com/search?keyword=曝雷军将为小米汽车发放1000个F码)
 1. [女子遭多人殴打 涉案人员已被抓获](https://so.toutiao.com/search?keyword=女子遭多人殴打+涉案人员已被抓获)
-1. [19岁小伙救人溺亡 获救者下跪致谢](https://so.toutiao.com/search?keyword=19岁小伙救人溺亡+获救者下跪致谢)
-1. [投资9000万元危房全没拆 21人被追责](https://so.toutiao.com/search?keyword=投资9000万元危房全没拆+21人被追责)
-1. [雷克萨斯加价公司拟被罚45万](https://so.toutiao.com/search?keyword=雷克萨斯加价公司拟被罚45万)
-1. [歼20紧急升空逼退外机](https://so.toutiao.com/search?keyword=歼20紧急升空逼退外机)
-1. [湖南一县政协主席涉刑案 已被控制](https://so.toutiao.com/search?keyword=湖南一县政协主席涉刑案+已被控制)
+1. [张瑞敏点拨董宇辉：你已经是人才了](https://so.toutiao.com/search?keyword=张瑞敏点拨董宇辉：你已经是人才了)
 1. [中国人在俄罗斯盖房直呼大件太贵](https://so.toutiao.com/search?keyword=中国人在俄罗斯盖房直呼大件太贵)
-1. [王楚钦花式赞马龙](https://so.toutiao.com/search?keyword=王楚钦花式赞马龙)
-1. [小伙在美国卖三蹦子日入1万美金](https://so.toutiao.com/search?keyword=小伙在美国卖三蹦子日入1万美金)
-1. [中方谈是否同法说过法向乌派兵话题](https://so.toutiao.com/search?keyword=中方谈是否同法说过法向乌派兵话题)
-1. [曝小米汽车定价较去年降3到5万](https://so.toutiao.com/search?keyword=曝小米汽车定价较去年降3到5万)
+1. [歼20紧急升空逼退外机](https://so.toutiao.com/search?keyword=歼20紧急升空逼退外机)
+1. [王婆说媒火出圈 有游客一早去排队](https://so.toutiao.com/search?keyword=王婆说媒火出圈+有游客一早去排队)
+1. [国足本期名单平均年龄29.6岁](https://so.toutiao.com/search?keyword=国足本期名单平均年龄29.6岁)
+1. [律师：许家印或被追究刑事责任](https://so.toutiao.com/search?keyword=律师：许家印或被追究刑事责任)
+1. [保姆多次抽打男婴还用被子捂脸拽扯](https://so.toutiao.com/search?keyword=保姆多次抽打男婴还用被子捂脸拽扯)
+1. [Kimi概念股暴涨](https://so.toutiao.com/search?keyword=Kimi概念股暴涨)
 1. [胡塞导弹首次击中以色列领土](https://so.toutiao.com/search?keyword=胡塞导弹首次击中以色列领土)
-1. [医院员工试图查阅凯特医疗记录被捕](https://so.toutiao.com/search?keyword=医院员工试图查阅凯特医疗记录被捕)
-1. [官方辟谣小米汽车定价26.6万元起](https://so.toutiao.com/search?keyword=官方辟谣小米汽车定价26.6万元起)
-1. [大S小作文细节](https://so.toutiao.com/search?keyword=大S小作文细节)
+1. [19岁网红“山东小钺钺”重伤](https://so.toutiao.com/search?keyword=19岁网红“山东小钺钺”重伤)
 1. [政府要过“紧日子”谁最受影响](https://so.toutiao.com/search?keyword=政府要过“紧日子”谁最受影响)
-1. [当贵阳清水烫遇上甘肃天水麻辣烫](https://so.toutiao.com/search?keyword=当贵阳清水烫遇上甘肃天水麻辣烫)
-1. [曝凯特王妃“复出”绝密计划获认可](https://so.toutiao.com/search?keyword=曝凯特王妃“复出”绝密计划获认可)
+1. [新一周销量前10比亚迪占7席霸榜](https://so.toutiao.com/search?keyword=新一周销量前10比亚迪占7席霸榜)
 1. [小男孩翻出3楼窗外被女子隔空吼回](https://so.toutiao.com/search?keyword=小男孩翻出3楼窗外被女子隔空吼回)
+1. [19岁小伙救人溺亡 获救者下跪致谢](https://so.toutiao.com/search?keyword=19岁小伙救人溺亡+获救者下跪致谢)
+1. [曝凯特王妃“复出”绝密计划获认可](https://so.toutiao.com/search?keyword=曝凯特王妃“复出”绝密计划获认可)
+1. [罚恒大41.75亿的深层意义是什么](https://so.toutiao.com/search?keyword=罚恒大41.75亿的深层意义是什么)
+1. [普京称新任期首次出访考虑去中国](https://so.toutiao.com/search?keyword=普京称新任期首次出访考虑去中国)
+1. [70城房价回到1年前](https://so.toutiao.com/search?keyword=70城房价回到1年前)
+1. [深圳亿元资产家庭近6000户](https://so.toutiao.com/search?keyword=深圳亿元资产家庭近6000户)
+1. [媒体：三问凯特王妃“失踪”风波](https://so.toutiao.com/search?keyword=媒体：三问凯特王妃“失踪”风波)
+1. [曝小米汽车定价较去年降3到5万](https://so.toutiao.com/search?keyword=曝小米汽车定价较去年降3到5万)
+1. [媒体人：对戴伟浚落选不意外](https://so.toutiao.com/search?keyword=媒体人：对戴伟浚落选不意外)
+1. [劳斯莱斯逼停直行车 司机被罚200](https://so.toutiao.com/search?keyword=劳斯莱斯逼停直行车+司机被罚200)
+1. [医院员工试图查阅凯特医疗记录被捕](https://so.toutiao.com/search?keyword=医院员工试图查阅凯特医疗记录被捕)
+1. [冯小刚回应病危移民等传闻](https://so.toutiao.com/search?keyword=冯小刚回应病危移民等传闻)
+1. [美专家：中国不会威胁美国国家安全](https://so.toutiao.com/search?keyword=美专家：中国不会威胁美国国家安全)
+1. [官方辟谣小米汽车定价26.6万元起](https://so.toutiao.com/search?keyword=官方辟谣小米汽车定价26.6万元起)
+1. [娃哈哈旗舰店销售额比上周下降90%](https://so.toutiao.com/search?keyword=娃哈哈旗舰店销售额比上周下降90%)
+1. [雷克萨斯加价公司拟被罚45万](https://so.toutiao.com/search?keyword=雷克萨斯加价公司拟被罚45万)
+1. [湖南一县政协主席涉刑案 已被控制](https://so.toutiao.com/search?keyword=湖南一县政协主席涉刑案+已被控制)
+1. [王楚钦花式赞马龙](https://so.toutiao.com/search?keyword=王楚钦花式赞马龙)
+1. [中方谈是否同法说过法向乌派兵话题](https://so.toutiao.com/search?keyword=中方谈是否同法说过法向乌派兵话题)
+1. [大S小作文细节](https://so.toutiao.com/search?keyword=大S小作文细节)
+1. [当贵阳清水烫遇上甘肃天水麻辣烫](https://so.toutiao.com/search?keyword=当贵阳清水烫遇上甘肃天水麻辣烫)
 1. [国产汽车芯片路在何方](https://so.toutiao.com/search?keyword=国产汽车芯片路在何方)
 1. [国足客战新加坡全力争胜](https://so.toutiao.com/search?keyword=国足客战新加坡全力争胜)
 1. [四川女篮季后赛票价最高1280元](https://so.toutiao.com/search?keyword=四川女篮季后赛票价最高1280元)
 1. [青岛已新开6家甘肃麻辣烫小吃店](https://so.toutiao.com/search?keyword=青岛已新开6家甘肃麻辣烫小吃店)
 1. [男子新房舍不得铺地板 四处偷地垫](https://so.toutiao.com/search?keyword=男子新房舍不得铺地板+四处偷地垫)
 1. [投资者子女可在西藏高考公平吗](https://so.toutiao.com/search?keyword=投资者子女可在西藏高考公平吗)
-1. [小男孩帅气侧手翻砸到老师大腿上](https://so.toutiao.com/search?keyword=小男孩帅气侧手翻砸到老师大腿上)
 1. [库克在中国首谈生成式AI](https://so.toutiao.com/search?keyword=库克在中国首谈生成式AI)
 1. [卡梅伦发表涉港错误言论 中方回应](https://so.toutiao.com/search?keyword=卡梅伦发表涉港错误言论+中方回应)
 1. [专家评“券商一哥”硬刚深交所](https://so.toutiao.com/search?keyword=专家评“券商一哥”硬刚深交所)
 1. [有游客凌晨2点排队吃天水麻辣烫](https://so.toutiao.com/search?keyword=有游客凌晨2点排队吃天水麻辣烫)
-1. [新一周销量前10比亚迪占7席霸榜](https://so.toutiao.com/search?keyword=新一周销量前10比亚迪占7席霸榜)
 1. [伊万强调国足对阵新加坡要稳快准](https://so.toutiao.com/search?keyword=伊万强调国足对阵新加坡要稳快准)
-1. [劳斯莱斯逼停直行车 司机被罚200](https://so.toutiao.com/search?keyword=劳斯莱斯逼停直行车+司机被罚200)
 1. [乘大客车出行遇事故如何自救逃生](https://so.toutiao.com/search?keyword=乘大客车出行遇事故如何自救逃生)
 1. [清明放假3天](https://so.toutiao.com/search?keyword=清明放假3天)
 1. [近3万元金手镯仅含足金十克](https://so.toutiao.com/search?keyword=近3万元金手镯仅含足金十克)
@@ -80,7 +95,6 @@
 1. [海口雷克萨斯4S店涉嫌价外加价后续](https://so.toutiao.com/search?keyword=海口雷克萨斯4S店涉嫌价外加价后续)
 1. [山西高速交通事故已致14人死亡](https://so.toutiao.com/search?keyword=山西高速交通事故已致14人死亡)
 1. [平台方回应上门按摩APP涉黄](https://so.toutiao.com/search?keyword=平台方回应上门按摩APP涉黄)
-1. [罚恒大41.75亿的深层意义是什么](https://so.toutiao.com/search?keyword=罚恒大41.75亿的深层意义是什么)
 1. [台陆军四月将在金门海域实弹射击](https://so.toutiao.com/search?keyword=台陆军四月将在金门海域实弹射击)
 1. [江西乐平市常务副市长丁巍被查](https://so.toutiao.com/search?keyword=江西乐平市常务副市长丁巍被查)
 1. [专家谈韩为何举办所谓“民主峰会”](https://so.toutiao.com/search?keyword=专家谈韩为何举办所谓“民主峰会”)
