--- a/archives/toutiao-search/2024-03-21.md
+++ b/archives/toutiao-search/2024-03-21.md
@@ -1,59 +1,73 @@
 # 2024-03-21
 
-共 230 条
+共 243 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Mar 21 2024 15:00:40 GMT+0800 (China Standard Time) -->
-1. [武氏映春出任越南国家代主席](https://so.toutiao.com/search?keyword=武氏映春出任越南国家代主席)
-1. [房价跌了23%为啥还是没人买](https://so.toutiao.com/search?keyword=房价跌了23%为啥还是没人买)
+<!-- 最后更新时间 Thu Mar 21 2024 16:07:13 GMT+0800 (China Standard Time) -->
+1. [越南国家主席辞职背后浮出大案](https://so.toutiao.com/search?keyword=越南国家主席辞职背后浮出大案)
+1. [乌首都遭俄军数枚高超音速导弹袭击](https://so.toutiao.com/search?keyword=乌首都遭俄军数枚高超音速导弹袭击)
 1. [用课本封面的方式打开春耕画卷](https://so.toutiao.com/search?keyword=用课本封面的方式打开春耕画卷)
 1. [越南国家主席为何三年换了三个](https://so.toutiao.com/search?keyword=越南国家主席为何三年换了三个)
 1. [螺蛳粉塌房 被发现有增臭剂](https://so.toutiao.com/search?keyword=螺蛳粉塌房+被发现有增臭剂)
 1. [冷静期杀妻案择期宣判 男方不认罪](https://so.toutiao.com/search?keyword=冷静期杀妻案择期宣判+男方不认罪)
+1. [曲婉婷父女现身国外街头](https://so.toutiao.com/search?keyword=曲婉婷父女现身国外街头)
 1. [雷军展示小米SU7](https://so.toutiao.com/search?keyword=雷军展示小米SU7)
-1. [越南国家主席辞职背后浮出大案](https://so.toutiao.com/search?keyword=越南国家主席辞职背后浮出大案)
-1. [多人三亚潜水时被摘下面罩强行推销](https://so.toutiao.com/search?keyword=多人三亚潜水时被摘下面罩强行推销)
-1. [紫色版小米SU7闪现武汉大学](https://so.toutiao.com/search?keyword=紫色版小米SU7闪现武汉大学)
-1. [央媒：校园霸凌出现高危苗头](https://so.toutiao.com/search?keyword=央媒：校园霸凌出现高危苗头)
 1. [女生戴录音器找开封王婆求姻缘被拒](https://so.toutiao.com/search?keyword=女生戴录音器找开封王婆求姻缘被拒)
-1. [呼北高速14死车祸伤者家属发声](https://so.toutiao.com/search?keyword=呼北高速14死车祸伤者家属发声)
-1. [乘客坐地铁 一袋钱随意放地上](https://so.toutiao.com/search?keyword=乘客坐地铁+一袋钱随意放地上)
-1. [储殷：普京赢得大选释放三个信号](https://so.toutiao.com/search?keyword=储殷：普京赢得大选释放三个信号)
 1. [贾玲现身好莱坞片场](https://so.toutiao.com/search?keyword=贾玲现身好莱坞片场)
 1. [娃哈哈客服回应网店销量暴降](https://so.toutiao.com/search?keyword=娃哈哈客服回应网店销量暴降)
-1. [赵安吉溺亡时处于醉酒状态](https://so.toutiao.com/search?keyword=赵安吉溺亡时处于醉酒状态)
-1. [女孩投重疾险后患糖尿病被拒保](https://so.toutiao.com/search?keyword=女孩投重疾险后患糖尿病被拒保)
+1. [开封王婆说媒现场有多火](https://so.toutiao.com/search?keyword=开封王婆说媒现场有多火)
+1. [成都官方辟谣高中老师殴打学生](https://so.toutiao.com/search?keyword=成都官方辟谣高中老师殴打学生)
+1. [呼北高速14死车祸伤者家属发声](https://so.toutiao.com/search?keyword=呼北高速14死车祸伤者家属发声)
+1. [武氏映春出任越南国家代主席](https://so.toutiao.com/search?keyword=武氏映春出任越南国家代主席)
+1. [央媒：校园霸凌出现高危苗头](https://so.toutiao.com/search?keyword=央媒：校园霸凌出现高危苗头)
+1. [多人三亚潜水时被摘下面罩强行推销](https://so.toutiao.com/search?keyword=多人三亚潜水时被摘下面罩强行推销)
+1. [紫色版小米SU7闪现武汉大学](https://so.toutiao.com/search?keyword=紫色版小米SU7闪现武汉大学)
 1. [曝成龙剧组拍戏封路与居民起争执](https://so.toutiao.com/search?keyword=曝成龙剧组拍戏封路与居民起争执)
-1. [四川3名小孩玩耍时掉入化粪池离世](https://so.toutiao.com/search?keyword=四川3名小孩玩耍时掉入化粪池离世)
-1. [特朗普：请求各位能不能给我捐点钱](https://so.toutiao.com/search?keyword=特朗普：请求各位能不能给我捐点钱)
-1. [榆林一女中学生遭多名同学围殴](https://so.toutiao.com/search?keyword=榆林一女中学生遭多名同学围殴)
-1. [凤凰传奇4月20日济南演唱会取消](https://so.toutiao.com/search?keyword=凤凰传奇4月20日济南演唱会取消)
-1. [韩媒追问韩国“第一夫人”去哪儿了](https://so.toutiao.com/search?keyword=韩媒追问韩国“第一夫人”去哪儿了)
-1. [中国美债持仓重回8000亿美元以下](https://so.toutiao.com/search?keyword=中国美债持仓重回8000亿美元以下)
-1. [金价杀疯了 现在上车还来得及吗](https://so.toutiao.com/search?keyword=金价杀疯了+现在上车还来得及吗)
+1. [乘客坐地铁 一袋钱随意放地上](https://so.toutiao.com/search?keyword=乘客坐地铁+一袋钱随意放地上)
+1. [台退将谈台军将在金门实弹射击](https://so.toutiao.com/search?keyword=台退将谈台军将在金门实弹射击)
 1. [玲花回应凤凰传奇演唱会取消](https://so.toutiao.com/search?keyword=玲花回应凤凰传奇演唱会取消)
+1. [四川3名小孩玩耍时掉入化粪池离世](https://so.toutiao.com/search?keyword=四川3名小孩玩耍时掉入化粪池离世)
+1. [网友打赏千元看大尺度直播后报警](https://so.toutiao.com/search?keyword=网友打赏千元看大尺度直播后报警)
+1. [许家印万亿“新衣”脱下之后](https://so.toutiao.com/search?keyword=许家印万亿“新衣”脱下之后)
+1. [赵安吉溺亡时处于醉酒状态](https://so.toutiao.com/search?keyword=赵安吉溺亡时处于醉酒状态)
+1. [快船主帅：伦纳德手部情况良好](https://so.toutiao.com/search?keyword=快船主帅：伦纳德手部情况良好)
+1. [储殷：普京赢得大选释放三个信号](https://so.toutiao.com/search?keyword=储殷：普京赢得大选释放三个信号)
+1. [金价杀疯了 现在上车还来得及吗](https://so.toutiao.com/search?keyword=金价杀疯了+现在上车还来得及吗)
+1. [特朗普：请求各位能不能给我捐点钱](https://so.toutiao.com/search?keyword=特朗普：请求各位能不能给我捐点钱)
+1. [韩媒追问韩国“第一夫人”去哪儿了](https://so.toutiao.com/search?keyword=韩媒追问韩国“第一夫人”去哪儿了)
+1. [温州发布“上门按摩”服务规范标准](https://so.toutiao.com/search?keyword=温州发布“上门按摩”服务规范标准)
+1. [榆林一女中学生遭多名同学围殴](https://so.toutiao.com/search?keyword=榆林一女中学生遭多名同学围殴)
+1. [女孩投重疾险后患糖尿病被拒保](https://so.toutiao.com/search?keyword=女孩投重疾险后患糖尿病被拒保)
+1. [警方回应山东小钺钺被利器重伤](https://so.toutiao.com/search?keyword=警方回应山东小钺钺被利器重伤)
+1. [山东济南市政府原参事孙竹兮被查](https://so.toutiao.com/search?keyword=山东济南市政府原参事孙竹兮被查)
+1. [四川一住建局原局长疯狂受贿买房](https://so.toutiao.com/search?keyword=四川一住建局原局长疯狂受贿买房)
+1. [城管制止商贩 双方只动嘴不动手](https://so.toutiao.com/search?keyword=城管制止商贩+双方只动嘴不动手)
+1. [理想发布全员信反思MEGA问题](https://so.toutiao.com/search?keyword=理想发布全员信反思MEGA问题)
+1. [村干部埋水泥桩拦路报复村民](https://so.toutiao.com/search?keyword=村干部埋水泥桩拦路报复村民)
+1. [原阿里董事会主席张勇加入晨壹基金](https://so.toutiao.com/search?keyword=原阿里董事会主席张勇加入晨壹基金)
+1. [美军拟在菲律宾北部建港口意欲何为](https://so.toutiao.com/search?keyword=美军拟在菲律宾北部建港口意欲何为)
+1. [蔡英文为何不敢登太平岛](https://so.toutiao.com/search?keyword=蔡英文为何不敢登太平岛)
+1. [印尼新当选总统是何许人](https://so.toutiao.com/search?keyword=印尼新当选总统是何许人)
+1. [雷军：SU7标准版配置远超Model 3](https://so.toutiao.com/search?keyword=雷军：SU7标准版配置远超Model+3)
+1. [遇害学生父亲尸检反复念叨：儿啊别怕](https://so.toutiao.com/search?keyword=遇害学生父亲尸检反复念叨：儿啊别怕)
+1. [山西高速隧道车祸与疲劳驾驶有关吗](https://so.toutiao.com/search?keyword=山西高速隧道车祸与疲劳驾驶有关吗)
+1. [两名“内鬼”同日被通报逮捕](https://so.toutiao.com/search?keyword=两名“内鬼”同日被通报逮捕)
+1. [院士：良好睡眠可降低疾病发生率](https://so.toutiao.com/search?keyword=院士：良好睡眠可降低疾病发生率)
+1. [对话离婚冷静期被丈夫杀害女子家属](https://so.toutiao.com/search?keyword=对话离婚冷静期被丈夫杀害女子家属)
+1. [房价跌了23%为啥还是没人买](https://so.toutiao.com/search?keyword=房价跌了23%为啥还是没人买)
+1. [凤凰传奇4月20日济南演唱会取消](https://so.toutiao.com/search?keyword=凤凰传奇4月20日济南演唱会取消)
+1. [中国美债持仓重回8000亿美元以下](https://so.toutiao.com/search?keyword=中国美债持仓重回8000亿美元以下)
 1. [美军加速测试潜射高超导弹](https://so.toutiao.com/search?keyword=美军加速测试潜射高超导弹)
 1. [儿子运动步数为0 母亲报警救其一命](https://so.toutiao.com/search?keyword=儿子运动步数为0+母亲报警救其一命)
-1. [许家印万亿“新衣”脱下之后](https://so.toutiao.com/search?keyword=许家印万亿“新衣”脱下之后)
-1. [曲婉婷父女现身国外街头](https://so.toutiao.com/search?keyword=曲婉婷父女现身国外街头)
-1. [村干部埋水泥桩拦路报复村民](https://so.toutiao.com/search?keyword=村干部埋水泥桩拦路报复村民)
 1. [2名医学生先后自杀？校方回应](https://so.toutiao.com/search?keyword=2名医学生先后自杀？校方回应)
-1. [台退将谈台军将在金门实弹射击](https://so.toutiao.com/search?keyword=台退将谈台军将在金门实弹射击)
 1. [奈飞版《三体》剧集今日开播](https://so.toutiao.com/search?keyword=奈飞版《三体》剧集今日开播)
-1. [城管制止商贩 双方只动嘴不动手](https://so.toutiao.com/search?keyword=城管制止商贩+双方只动嘴不动手)
 1. [女子上班伸懒腰遇翻车](https://so.toutiao.com/search?keyword=女子上班伸懒腰遇翻车)
-1. [两名“内鬼”同日被通报逮捕](https://so.toutiao.com/search?keyword=两名“内鬼”同日被通报逮捕)
-1. [网友打赏千元看大尺度直播后报警](https://so.toutiao.com/search?keyword=网友打赏千元看大尺度直播后报警)
 1. [朝鲜新型高超音速导弹相关试验成功](https://so.toutiao.com/search?keyword=朝鲜新型高超音速导弹相关试验成功)
 1. [小孩哥背一书包“孤寡”回家](https://so.toutiao.com/search?keyword=小孩哥背一书包“孤寡”回家)
 1. [乌议员：马克龙态度坚决正考虑派兵](https://so.toutiao.com/search?keyword=乌议员：马克龙态度坚决正考虑派兵)
 1. [央行：法定存款准备金率有下降空间](https://so.toutiao.com/search?keyword=央行：法定存款准备金率有下降空间)
-1. [四川一住建局原局长疯狂受贿买房](https://so.toutiao.com/search?keyword=四川一住建局原局长疯狂受贿买房)
 1. [《欢乐颂5》何悯鸿被拉黑](https://so.toutiao.com/search?keyword=《欢乐颂5》何悯鸿被拉黑)
 1. [许家印被罚背后是购房者心酸史](https://so.toutiao.com/search?keyword=许家印被罚背后是购房者心酸史)
-1. [温州发布“上门按摩”服务规范标准](https://so.toutiao.com/search?keyword=温州发布“上门按摩”服务规范标准)
-1. [警方回应山东小钺钺被利器重伤](https://so.toutiao.com/search?keyword=警方回应山东小钺钺被利器重伤)
-1. [原阿里董事会主席张勇加入晨壹基金](https://so.toutiao.com/search?keyword=原阿里董事会主席张勇加入晨壹基金)
 1. [对13岁性侵者不予刑罚 困窘如何打破](https://so.toutiao.com/search?keyword=对13岁性侵者不予刑罚+困窘如何打破)
 1. [网传十大致癌卫生巾黑名单系AI造谣](https://so.toutiao.com/search?keyword=网传十大致癌卫生巾黑名单系AI造谣)
 1. [马克龙晒硬汉照：打沙袋表情凶狠](https://so.toutiao.com/search?keyword=马克龙晒硬汉照：打沙袋表情凶狠)
@@ -184,7 +198,6 @@
 1. [日本扇贝出口陷入艰难境地](https://so.toutiao.com/search?keyword=日本扇贝出口陷入艰难境地)
 1. [新一周销量前10比亚迪占7席霸榜](https://so.toutiao.com/search?keyword=新一周销量前10比亚迪占7席霸榜)
 1. [男子持台球杆殴打2名女店员被抓](https://so.toutiao.com/search?keyword=男子持台球杆殴打2名女店员被抓)
-1. [山西高速隧道车祸与疲劳驾驶有关吗](https://so.toutiao.com/search?keyword=山西高速隧道车祸与疲劳驾驶有关吗)
 1. [四川达州被遗弃女婴已送还原生家庭](https://so.toutiao.com/search?keyword=四川达州被遗弃女婴已送还原生家庭)
 1. [伊万科维奇首秀会交出怎样的见面礼](https://so.toutiao.com/search?keyword=伊万科维奇首秀会交出怎样的见面礼)
 1. [西安交大少年班录取结果出炉](https://so.toutiao.com/search?keyword=西安交大少年班录取结果出炉)
